--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="logo">
         <img
           src="assets/images/logo.png"
           alt="Da zero a Epicode con i corsi completi per diventare uno sviluppatore professionista in 3 mesi."
         />
       </div>
-      <div>
-        <img src="assets/images/banner.jpg" alt="lavoro al pc" width="500px" />
+      <div class="corsodev">
         <h1>Corso Web Developer</h1>
         <p>
           Smetti di inseguire i titoli, inizia a lavorere. Mentre tutti vogliono arricchire il CV,
