--- a/index.html
+++ b/index.html
@@ -28,34 +28,36 @@
       </div>
     </header>
     <main>
-      <div>
+      <div class="divmain">
         <h3>Tutti ti cercheranno</h3>
         <p>
           Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di
           più
         </p>
       </div>
-      <div>
+      <div class="divmain">
         <h3>Lavora dove vuoi</h3>
         <p>Lavora da casa, in riva al mare o in motagna.</p>
       </div>
       <div>
-        <img src="assets/images/notebook.jpg" alt="notebook" width="500px" />
+        <img class="cerchio" src="assets/images/notebook.jpg" alt="notebook" width="500px" />
+      </div>
+      <div class="divmain">
         <h3>Scegli il tuo ruolo</h3>
         <p>Potrai scegliere se essere Azienda, Freelance o Startup</p>
       </div>
-      <div>
+      <div class="divmain">
         <h3>Lavora in libertà</h3>
         <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali</p>
       </div>
-      <div>
+      <div class="rosso">
         <h2>Epicode garantisce</h2>
         <p>&quot;3 mesi intensivi di corso che cambieranno radicalmente la tua vita&quot;</p>
         <h6>Mario Rossi</h6>
         <p>CEO, Epicode</p>
       </div>
     </main>
-    <aside>
+    <section>
       <div>
         <img src="assets/images/foto1.jpg" alt="il tuo pc" width="500px" />
         <h3>Il tuo PC</h3>
@@ -71,7 +73,7 @@
         <h3>Lavora subito</h3>
         <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
       </div>
-    </aside>
+    </section>
     <footer>
       <h2>Contattaci</h2>
       <p>
@@ -84,7 +86,9 @@
       </p>
       <p><i class="fa-solid fa-square-up-right"></i> Via Appia 1 - 00100 Roma &lpar;RM&rpar;</p>
       <hr />
-      <p>&copy; 2021. Immagini di <a href="cite:https://pixabay.com/it/">Pixabay</a>&period;</p>
+      <p class="lastp">
+        &copy; 2021. Immagini di <a href="cite:https://pixabay.com/it/">Pixabay</a>&period;
+      </p>
     </footer>
   </body>
 </html>
