manca ultimo fix

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h3>Lavora dove vuoi</h3>
         <p>Lavora da casa, in riva al mare o in motagna.</p>
       </div>
-      <div>
+      <div class="divc">
         <img class="cerchio" src="assets/images/notebook.jpg" alt="notebook" width="500px" />
       </div>
       <div class="divmain">
