--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <p><i class="fa-solid fa-square-up-right"></i> Via Appia 1 - 00100 Roma &lpar;RM&rpar;</p>
       <hr />
       <p class="lastp">
-        &copy; 2021. Immagini di <a href="cite:https://pixabay.com/it/">Pixabay</a>&period;
+        &copy; 2021. Immagini di <a href="cite:https://pixabay.com/it/">Pixabay</a>
       </p>
     </footer>
   </body>
